# PyNvCodec

./: pyproject.toml
src/PytorchNvCodec/: pyproject.toml
