[tool.poetry]
name = "PytorchNvCodec"
version = "2.0.0"
description = "Video Processing Framework"
authors = ["TBD"]
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true
script = "setup.py"

[tool.poetry.dependencies]
torch = "2.0.0"

[build-system]        
requires = [
  "setuptools>=42",
  "torch"
]
